cmake_minimum_required(VERSION 3.7)
project(src)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        cpu/o3/probe/SConscript
        cpu/o3/probe/simple_trace.cc
        cpu/o3/probe/simple_trace.hh
        cpu/o3/probe/SimpleTrace.py
        cpu/o3/base_dyn_inst.cc
        cpu/o3/bmt.cc
        cpu/o3/bmt.hh
        cpu/o3/bmt_impl.hh
        cpu/o3/checker.cc
        cpu/o3/checker.hh
        cpu/o3/comm.hh
        cpu/o3/commit.cc
        cpu/o3/commit.hh
        cpu/o3/commit_impl.hh
        cpu/o3/cpu.cc
        cpu/o3/cpu.hh
        cpu/o3/cpu_policy.hh
        cpu/o3/decode.cc
        cpu/o3/decode.hh
        cpu/o3/decode_impl.hh
        cpu/o3/dep_graph.hh
        cpu/o3/deriv.cc
        cpu/o3/deriv.hh
        cpu/o3/dyn_inst.cc
        cpu/o3/dyn_inst.hh
        cpu/o3/dyn_inst_impl.hh
        cpu/o3/fetch.cc
        cpu/o3/fetch.hh
        cpu/o3/fetch_impl.hh
        cpu/o3/fmt.cc
        cpu/o3/fmt.hh
        cpu/o3/fmt_impl.hh
        cpu/o3/free_list.cc
        cpu/o3/free_list.hh
        cpu/o3/fu_pool.cc
        cpu/o3/fu_pool.hh
        cpu/o3/FuncUnitConfig.py
        cpu/o3/FUPool.py
        cpu/o3/iew.cc
        cpu/o3/iew.hh
        cpu/o3/iew_impl.hh
        cpu/o3/impl.hh
        cpu/o3/inst_queue.cc
        cpu/o3/inst_queue.hh
        cpu/o3/inst_queue_impl.hh
        cpu/o3/isa_specific.hh
        cpu/o3/log.hh
        cpu/o3/lsq.cc
        cpu/o3/lsq.hh
        cpu/o3/lsq_impl.hh
        cpu/o3/lsq_unit.cc
        cpu/o3/lsq_unit.hh
        cpu/o3/lsq_unit_impl.hh
        cpu/o3/mem_dep_unit.cc
        cpu/o3/mem_dep_unit.hh
        cpu/o3/mem_dep_unit_impl.hh
        cpu/o3/O3Checker.py
        cpu/o3/O3CPU.py
        cpu/o3/regfile.cc
        cpu/o3/regfile.hh
        cpu/o3/rename.cc
        cpu/o3/rename.hh
        cpu/o3/rename_impl.hh
        cpu/o3/rename_map.cc
        cpu/o3/rename_map.hh
        cpu/o3/rob.cc
        cpu/o3/rob.hh
        cpu/o3/rob_impl.hh
        cpu/o3/SConscript
        cpu/o3/SConsopts
        cpu/o3/scoreboard.cc
        cpu/o3/scoreboard.hh
        cpu/o3/slot_counter.cc
        cpu/o3/slot_counter.hh
        cpu/o3/slot_counter_impl.hh
        cpu/o3/store_set.cc
        cpu/o3/store_set.hh
        cpu/o3/thread_context.cc
        cpu/o3/thread_context.hh
        cpu/o3/thread_context_impl.hh
        cpu/o3/thread_state.hh
        cpu/o3/voc.cc
        cpu/o3/voc.hh
        cpu/o3/voc_impl.hh
        mem/cache/prefetch/base.cc
        mem/cache/prefetch/base.hh
        mem/cache/prefetch/Prefetcher.py
        mem/cache/prefetch/queued.cc
        mem/cache/prefetch/queued.hh
        mem/cache/prefetch/SConscript
        mem/cache/prefetch/stride.cc
        mem/cache/prefetch/stride.hh
        mem/cache/prefetch/tagged.cc
        mem/cache/prefetch/tagged.hh
        mem/cache/tags/base.cc
        mem/cache/tags/base.hh
        mem/cache/tags/base_set_assoc.cc
        mem/cache/tags/base_set_assoc.hh
        mem/cache/tags/cacheset.hh
        mem/cache/tags/fa_lru.cc
        mem/cache/tags/fa_lru.hh
        mem/cache/tags/lru.cc
        mem/cache/tags/lru.hh
        mem/cache/tags/lru_partition.cc
        mem/cache/tags/lru_partition.hh
        mem/cache/tags/random_repl.cc
        mem/cache/tags/random_repl.hh
        mem/cache/tags/lru_dynpartition.cc
        mem/cache/tags/lru_dynpartition.hh
        mem/cache/tags/SConscript
        mem/cache/tags/Tags.py
        mem/cache/base.cc
        mem/cache/base.hh
        mem/cache/BaseCache.py
        mem/cache/blk.cc
        mem/cache/blk.hh
        mem/cache/cache.cc
        mem/cache/cache.hh
        mem/cache/cache_impl.hh
        mem/cache/miss_table.cc
        mem/cache/miss_table.hh
        mem/cache/mshr.cc
        mem/cache/mshr.hh
        mem/cache/mshr_queue.cc
        mem/cache/mshr_queue.hh
        mem/cache/SConscript
        cpu/o3/slot_consume.cc
        cpu/o3/slot_consume_impl.hh
        cpu/o3/slot_consume.hh)

include_directories(.)

add_executable(src ${SOURCE_FILES})